# mox_cluster_tests

./: .gitignore  README.md
baseline/: CMakeLists.txt  Makefile  cmake_install.cmake  dealii_indexset_vector.cc  dealii_indexset_vector.cpp  pybind_dealii_test.cc
pyfex_tests/: data_vis.ipynb  original.py
pyfex_tests/results/: 10core.txt  20core.txt  5core.txt  cpp.txt  python.txt  r3.txt  r4.txt  r5.txt
step40bind/: CMakeLists.txt
step40bind/src/: dealii_step40.cpp  dealii_step40.hpp  dealii_step40_bind.cpp
step40bind/tests/: binding_test.py  original_test_script_ELENAMOD.py  process_py_output.ipynb  sim2_cpp_output.txt  sim2_py_out.txt  sim2_py_out_processed.txt  test.cpp  test_cpp_vs_pybind.cpp  test_parallel_effects.cpp
